--- a/arch/arm/configs/quark_defconfig
+++ b/arch/arm/configs/quark_defconfig
@@ -1109,6 +1109,7 @@ CONFIG_BT_RFCOMM=y
 # CONFIG_BT_HCIBTUSB is not set
 # CONFIG_BT_HCIBTSDIO is not set
 CONFIG_BT_HCIUART=y
+CONFIG_BT_HCIUART_H4=y
 # CONFIG_BT_HCIBCM203X is not set
 # CONFIG_BT_HCIBPA10X is not set
 CONFIG_BT_MSM_SLEEP=n
