--- a/arch/arm/configs/quark_defconfig
+++ b/arch/arm/configs/quark_defconfig
@@ -1108,7 +1108,7 @@ CONFIG_BT_RFCOMM=y
 #
 # CONFIG_BT_HCIBTUSB is not set
 # CONFIG_BT_HCIBTSDIO is not set
-CONFIG_BT_HCISMD=y
+CONFIG_BT_HCISMD=m
 CONFIG_BT_HCIUART=y
 CONFIG_BT_HCIUART_H4=y
 # CONFIG_BT_HCIBCM203X is not set
@@ -1805,7 +1805,7 @@ CONFIG_WLAN=y
 # CONFIG_USB_NET_RNDIS_WLAN is not set
 # CONFIG_LIBRA_SDIOIF is not set
 # CONFIG_ATH6K_LEGACY_EXT is not set
-# CONFIG_WCNSS_CORE is not set
+CONFIG_WCNSS_CORE=m
 CONFIG_CNSS=y
 CONFIG_CNSS_SECURE_FW=y
 CONFIG_WCNSS_MEM_PRE_ALLOC=y
