--- a/arch/arm/configs/quark_defconfig
+++ b/arch/arm/configs/quark_defconfig
@@ -1805,7 +1805,7 @@ CONFIG_WLAN=y
 # CONFIG_USB_NET_RNDIS_WLAN is not set
 # CONFIG_LIBRA_SDIOIF is not set
 # CONFIG_ATH6K_LEGACY_EXT is not set
-CONFIG_WCNSS_CORE=m
+# CONFIG_WCNSS_CORE is not set
 CONFIG_CNSS=y
 CONFIG_CNSS_SECURE_FW=y
 CONFIG_WCNSS_MEM_PRE_ALLOC=y
